--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.0.0",
     "react-mailto": "^0.4.0",
     "react-redux": "^5.0.6",
+    "react-responsive": "^3.0.0",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2"
