--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "material-ui": "^0.19.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-form-validator-core": "^0.1.1",
     "react-mailto": "^0.4.0",
+    "react-material-ui-form-validator": "^1.0.1",
+    "react-parallax": "^1.5.0",
     "react-redux": "^5.0.6",
     "react-responsive": "^3.0.0",
     "react-scripts": "1.0.14",
+    "react-scroll": "^1.6.4",
+    "react-scroll-to-component": "^1.0.1",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2"
   },
