add ab testing and GA

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "firebase": "^4.6.0",
     "material-ui": "^0.19.4",
     "react": "^16.0.0",
+    "react-ab-test": "^2.0.1",
     "react-dom": "^16.0.0",
     "react-form-validator-core": "^0.1.1",
+    "react-ga": "^2.3.5",
     "react-mailto": "^0.4.0",
     "react-material-ui-form-validator": "^1.0.1",
     "react-parallax": "^1.5.0",
