--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-ui": "^0.19.4",
     "react": "^16.0.0",
     "react-ab-test": "^2.0.1",
+    "react-browser-detection": "^1.0.4",
     "react-dom": "^16.0.0",
     "react-form-validator-core": "^0.1.1",
     "react-ga": "^2.3.5",
