change react version

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^2.13.8",
+    "create-react-class": "^15.6.3",
     "firebase": "^4.6.0",
     "material-ui": "^0.19.4",
-    "react": "^16.0.0",
+    "react": "^15.6.2",
     "react-ab-test": "^2.0.1",
     "react-browser-detection": "^1.0.4",
-    "react-dom": "^16.0.0",
+    "react-dom": "^15.6.2",
     "react-form-validator-core": "^0.1.1",
     "react-ga": "^2.3.5",
     "react-mailto": "^0.4.0",
